--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile-pic" src="images/rajesh.jpg">
+					<img id="profile-pic" src="images/profile.jpg">
 					<h5 style="text-align: center; line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
